# TritonPlan

./: AGENTS.md  ARCHITECTURE.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  test.md
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  course.py
backend/app/schemas/: course.py
backend/tests/: test_health.py  test_models.py  test_startup.py
frontend/: Dockerfile
