[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tritonplan-backend"
version = "0.1.0"
description = "FastAPI backend for TritonPlan."
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "fastapi",
    "pgvector",
    "psycopg[binary]",
    "pydantic-settings",
    "sqlalchemy>=2",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["app", "tests"]
target-version = "py312"

[tool.setuptools.packages.find]
include = ["app*"]
